fix: mobile header spacing refinement

--- a/sites/public/styles/headers.scss
+++ b/sites/public/styles/headers.scss
@@ -10,7 +10,7 @@
       align-items: center;
       height: auto;
       max-height: none;
-      padding: 24px 0 18px;
+      padding: var(--bloom-s6) 0;
 
       @media (min-width: $header-desktop-min-size) {
         padding: 0 12px;
